--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title>GOT Client</title>
+    <link href='https://fonts.googleapis.com/css?family=Cinzel' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+    <link rel="stylesheet" href="main.css">
 	</head>
 
 	<body onload="load_page()">
